--- a/tao bang.html
+++ b/tao bang.html
@@ -16,7 +16,7 @@
         <input type="text"><br>
         Giới tính: <br>
         <input type="radio" name="gender" value="Nam"> Nam  <br>
-        <input type="radio" name="gender" value="Nữ"> Nữ
+        <input type="radio" name="gender" value="Nữ"> N
     </form>
 </body>
 </html>
