--- a/baitoanlainganhang.html
+++ b/baitoanlainganhang.html
@@ -7,10 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-   <script>
-    let x=+prompt('nhapvaoday:');
-    let y=+prompt('nhapvaoday:');
-    alert('tong' + x+y );
-   </script>
+    <script>
+        let sotienguitietkiem = 50000000;
+        let sotienlai1nam=3450000;
+        let x=prompt('so nam:');
+        let sotienguixnam=sotienguitietkiem+x*sotienlai1nam;
+        alert('sotienguisauxnam' + sotienguixnam);
+    </script>
 </body>
 </html>
