--- a/maytinhv.html
+++ b/maytinhv.html
@@ -19,6 +19,7 @@
     <button onclick="inpp(9)">9</button> 
     <button onclick="inpp(0)">0</button>
    <button onclick="inpp('+')">+</button>
+   <button onclick="inpp('%')">%</button>
    <button onclick="inpp('-')">-</button> <br>
    <button onclick="inpp('/')">/</button> 
    <button onclick="inpp('*')">*</button>
@@ -35,7 +36,7 @@
             document.getElementById('scr').value=eval(pheptinh);
         }
         function AC() {
-            document.getElementById('AC').value+=""
+            document.getElementById('scr').value='';
         }
     </script>
 
